# compressed-nft-app

./: .replit  README.md  mix.exs  replit.nix  shell.nix
_build/dev/lib/earmark_parser/.mix/: compile.elixir  compile.erlang
_build/dev/lib/earmark_parser/ebin/: Elixir.EarmarkParser.Ast.Emitter.beam  Elixir.EarmarkParser.Ast.Inline.beam  Elixir.EarmarkParser.Ast.Renderer.AstWalker.beam  Elixir.EarmarkParser.Ast.Renderer.FootnoteRenderer.beam  Elixir.EarmarkParser.Ast.Renderer.HtmlRenderer.beam  Elixir.EarmarkParser.Ast.Renderer.TableRenderer.beam  Elixir.EarmarkParser.AstRenderer.beam  Elixir.EarmarkParser.Block.BlockQuote.beam  Elixir.EarmarkParser.Block.Code.beam  Elixir.EarmarkParser.Block.FnDef.beam  Elixir.EarmarkParser.Block.FnList.beam  Elixir.EarmarkParser.Block.Heading.beam  Elixir.EarmarkParser.Block.Html.beam  Elixir.EarmarkParser.Block.HtmlComment.beam  Elixir.EarmarkParser.Block.HtmlOneline.beam  Elixir.EarmarkParser.Block.Ial.beam  Elixir.EarmarkParser.Block.IdDef.beam  Elixir.EarmarkParser.Block.List.beam  Elixir.EarmarkParser.Block.ListItem.beam  Elixir.EarmarkParser.Block.Para.beam  Elixir.EarmarkParser.Block.Ruler.beam  Elixir.EarmarkParser.Block.Table.beam  Elixir.EarmarkParser.Block.Text.beam  Elixir.EarmarkParser.Context.beam  (+44 more)
attached_assets/: Pasted--Rust-NIFs-for-Elixir-to-interact-with-mpl-bubblegum-and-Solana-use-rustler-Encoder-Env-NifR-1741739884629.txt
lib/: bubblegum.ex
native/bubblegum_nif/: Cargo.toml
native/bubblegum_nif/src/: error.rs  instructions.rs  lib.rs
test/: bubblegum_test.exs  test_helper.exs
(+675 files in other folders)
